// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledBox test 1`] = `
<Styled(div)
  alignSelf={null}
  background={null}
  backgroundImage={null}
  backgroundPosition={null}
  backgroundRepeat={null}
  backgroundSize={null}
  bg="dark_100"
  border={null}
  borderBottom={null}
  borderColor={null}
  borderLeft={null}
  borderRadius={null}
  borderRight={null}
  borderTop={null}
  bottom={null}
  boxShadow={null}
  className=""
  color="light_100"
  display={null}
  flex={null}
  flexBasis={null}
  fontFamily="monospace"
  fontSize="md"
  height={null}
  left={null}
  m="md"
  maxHeight={null}
  maxWidth={null}
  mb={null}
  minHeight={null}
  minWidth={null}
  ml={null}
  mr={null}
  mt={null}
  mx={null}
  my={null}
  opacity={null}
  order={null}
  overflow={null}
  p="lg"
  pb={null}
  pl={null}
  position={null}
  pr={null}
  pt={null}
  px={null}
  py={null}
  ratio={null}
  right={null}
  top={null}
  verticalAlign={null}
  width={null}
  zIndex={null}
>
  Styled Box
</Styled(div)>
`;

exports[`StyledFlex test 1`] = `
<Styled(div)
  alignContent={null}
  alignItems={null}
  alignSelf={null}
  background={null}
  backgroundImage={null}
  backgroundPosition={null}
  backgroundRepeat={null}
  backgroundSize={null}
  bg="dark_100"
  border={null}
  borderBottom={null}
  borderColor={null}
  borderLeft={null}
  borderRadius={null}
  borderRight={null}
  borderTop={null}
  bottom={null}
  boxShadow={null}
  className=""
  color="light_100"
  display={null}
  flex={null}
  flexBasis={null}
  flexDirection={null}
  flexWrap={null}
  fontFamily="monospace"
  fontSize="md"
  height={null}
  justifyContent={null}
  left={null}
  m="md"
  maxHeight={null}
  maxWidth={null}
  mb={null}
  minHeight={null}
  minWidth={null}
  ml={null}
  mr={null}
  mt={null}
  mx={null}
  my={null}
  opacity={null}
  order={null}
  overflow={null}
  p="lg"
  pb={null}
  pl={null}
  position={null}
  pr={null}
  pt={null}
  px={null}
  py={null}
  ratio={null}
  right={null}
  top={null}
  verticalAlign={null}
  width={null}
  zIndex={null}
>
  Styled Flex
</Styled(div)>
`;

exports[`StyledText test 1`] = `
<Styled(div)
  alignSelf={null}
  background={null}
  backgroundImage={null}
  backgroundPosition={null}
  backgroundRepeat={null}
  backgroundSize={null}
  bg="dark_100"
  border={null}
  borderBottom={null}
  borderColor={null}
  borderLeft={null}
  borderRadius={null}
  borderRight={null}
  borderTop={null}
  bottom={null}
  boxShadow={null}
  className=""
  color="light_100"
  display={null}
  flex={null}
  flexBasis={null}
  fontFamily="monospace"
  fontSize="md"
  fontWeight={null}
  height={null}
  left={null}
  letterSpacing={null}
  lineHeight={null}
  m="md"
  maxHeight={null}
  maxWidth={null}
  mb={null}
  minHeight={null}
  minWidth={null}
  ml={null}
  mr={null}
  mt={null}
  mx={null}
  my={null}
  opacity={null}
  order={null}
  overflow={null}
  p="lg"
  pb={null}
  pl={null}
  position={null}
  pr={null}
  pt={null}
  px={null}
  py={null}
  ratio={null}
  right={null}
  textAlign={null}
  top={null}
  verticalAlign={null}
  width={null}
  zIndex={null}
>
  Styled Text
</Styled(div)>
`;
